added a navigation bar to the page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" href="/img/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <title>Share |Let's Share </title>
+    <title>Share || Let's Share </title>
 
 
 
@@ -21,7 +21,9 @@
                 <button class="search-btn"><i class="fas fa-search"></i></button>
             </div>
             <button class="create">Let me share</button>
-            <img src="/img/4.jpg" class="profile">
+            <div class="nav-pic-icon online">
+                <img src="/img/4.jpg" class="profile">
+            </div>
         </nav>
     </header>
     
