added some responsiveness and created signup page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="shortcut icon" href="/img/logo.png" type="image/png">
+    <link rel="shortcut icon" href="img/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <title>Share || Let's Share </title>
 
@@ -13,65 +13,77 @@
 
 </head>
 <body>
+    <!-- This is the header section of the webpage -->
     <header>
+            <!-- This is the navigation bar located inside the header section -->
+
         <nav>
-            <a href="#"><img src="/img/logo/logo-no-background.png" alt="Share" class="logo"></a>
+                    <!-- This is the logo of the website, which is a clickable image -->
+
+            <a href="#"><div class="logo"></div></a>
+            <!-- This is the search bar, with an input field for typing search terms and a button for submitting the search -->
             <div class="search-bar">
-                <input type="text" name="search" id="Search-input" placeholder="Search">
-                <button class="search-btn"><i class="fas fa-search"></i></button>
-            </div>
-            <button class="create">Let me share</button>
-            <div class="nav-pic-icon online">
-                <img src="/img/photos-to-be-used/4.jpg" class="profile">
-            </div>
-        </nav>
+                    <input type="text" name="search" id="Search-input" placeholder="Search">
+                    <button class="search-btn"><i class="fas fa-search"></i></button>
+                </div>
+                            <!-- This is the "Let me share" button, which is clickable and leads to a new post creation form -->
+
+                <button class="create">Let me share</button>
+                            <!-- This div contains the user profile picture, which is clickable and leads to the user's profile page -->    
+                <div class="nav-pic-icon online">
+                    <img src="img/photos-to-be-used/4.jpg" class="profile">
+                </div>
+            </nav>
     </header>
-    <div class="container">
-        <div class="left-sider">
-            <div class="user">
-                <img src="/img/photos-to-be-used/4.jpg" >
-                <div class="profile-nameAnduser-name">
-                    <h3>Kidus Girma</h3>
-                    <p>@kidusG_</p>
-                </div>
-                    
+    <!-- This is the left sidebar of the webpage, containing the user's profile picture and navigation links -->
+    <div class="left-sider">
+            <!-- This div contains the user's profile picture and name/username -->
+
+        <div class="user">
+            <img src="img/photos-to-be-used/4.jpg" >
+            <div class="profile-nameAnduser-name">
+                <h3>Kidus Girma</h3>
+                <p>@kidusG_</p>
             </div>
-            <div class="navigation">
-                <div class="Home flex nav-property">
-                    <img src="/img/icons-to-be-used/home2/icons8-home-48.png" class="home-img">
-                    <h3>Home</h3>
-                </div>
-                <div class="Search flex nav-property">
-                    <img src="/img/icons-to-be-used/search2/icons8-search-50.png" class="search-img">
+             <!-- This div contains navigation links to various sections of the website, such as Home, Search, Explore, etc. -->
+        </div>
+        <div class="navigation">
+            <div class="Home flex nav-property">
+                <img src="img/icons-to-be-used/home2/icons8-home-48.png" class="home-img">
+                <h3>Home</h3>
+            </div>
+            <div class="Search flex nav-property">
+                    <img src="img/icons-to-be-used/search2/icons8-search-50.png" class="search-img">
                     <h3>Search</h3>
                 </div>
-
+                
                 <div class="Explore flex nav-property">
-                    <img src="/img/icons-to-be-used/explore1.1/icons8-compass-48.png" class="explore-img">
+                    <img src="img/icons-to-be-used/explore1.1/icons8-compass-48.png" class="explore-img">
                     <h3>Explore</h3>
                 </div>
                 <div class="Reels flex nav-property">
-                    <img src="/img/icons-to-be-used/reel1/icons8-instagram-reels-50.png" class="reels-img">
+                    <img src="img/icons-to-be-used/reel1/icons8-instagram-reels-50.png" class="reels-img">
                     <h3>Reels</h3>
                 </div>
                 <div class="Message flex nav-property">
-                    <img src="/img/icons-to-be-used/message1/icons8-speech-bubble-50.png" class="message-img">
+                    <img src="img/icons-to-be-used/message1/icons8-speech-bubble-50.png" class="message-img">
                     <h3>Message</h3>
                 </div>
                 <div class="Notification flex nav-property">
-                    <img src="/img/icons-to-be-used/notification2.1/icons8-favorite-48.png" class="notification-img">
+                    <img src="img/icons-to-be-used/notification2.1/icons8-favorite-48.png" class="notification-img">
                     <h3>Notification</h3>
                 </div>
                 <div class="Create flex nav-property cursor-pointer">
-                    <img src="/img/icons-to-be-used/create1.1/icons8-plus-48.png" class="create-img">
+                    <img src="img/icons-to-be-used/create1.1/icons8-plus-48.png" class="create-img">
                     <h3>Create</h3>
                 </div>
                 <div class="Settings flex nav-property">
-                    <img src="/img/icons-to-be-used/setting1/icons8-settings-50.png" class="setting-img">
+                    <img src="img/icons-to-be-used/setting1/icons8-settings-50.png" class="setting-img">
                     <h3>Settings</h3>
                 </div>
             </div>
         </div>
+    <div class="container">
         <div class="main">
             <div class="storys">
                 <div class="story1">
@@ -80,7 +92,7 @@
                     </div>
                 </div>
                 <div class="story2">
-                    <img src="/img/photos-to-be-used/profile-pic.png" class="story-profile">
+                    <img src="img/photos-to-be-used/profile-pic.png" class="story-profile">
                     <h4>Fisum Yilma</h4>
                 </div>
                 <div class="story3">
@@ -98,7 +110,7 @@
             </div>
             <div class="create-window">
                 <div class="create-section">
-                    <img src="/img/photos-to-be-used/4.jpg" class="profile-img" >  
+                    <img src="img/photos-to-be-used/4.jpg" class="profile-img" >  
                     <div class="share">
                             <input type="text">
                             <button>Share</button>
@@ -107,15 +119,15 @@
                <div class="hr"></div> 
                <div class="create-type">
                     <div class="live-Video">
-                            <img src="/img/icons-to-be-used/live-video.png">
+                            <img src="img/icons-to-be-used/live-video.png">
                             <h5>Live Video</h5>
                     </div>
                     <div class="photo-video">
-                            <img src="/img/icons-to-be-used/photos.png">
+                            <img src="img/icons-to-be-used/photos.png">
                             <h5>Photo/Video</h5>
                     </div>
                     <div class="feeling-activity">
-                            <img src="/img/icons-to-be-used/feeling.png">
+                            <img src="img/icons-to-be-used/feeling.png">
                             <h5>Feeling/Activity</h5>
                     </div>
                 </div>
@@ -123,7 +135,7 @@
             <div class="card">
                     <div class="header-section">
                         <div class="post_identity">
-                            <img src="/img/photos-to-be-used/profile-pic.png" class="pro-pic">
+                            <img src="img/photos-to-be-used/profile-pic.png" class="pro-pic">
                             <div class="pro-name_and_discripton">
                                 <h4>kebede demelash</h4>
                                 <p>Netherland, kalhashi ocean</p>
@@ -136,11 +148,11 @@
                     </div>
                     <div class="interactions">
                         <div class="reactions">
-                            <img src="/img/icons-to-be-used/heart-64.png" >
-                            <img src="/img/icons-to-be-used/comments-48.png" >
-                            <img src="/img/icons-to-be-used/share.png" >
+                            <img src="img/icons-to-be-used/heart-64.png" >
+                            <img src="img/icons-to-be-used/comments-48.png" >
+                            <img src="img/icons-to-be-used/share.png" >
                         </div>
-                        <img src="/img/icons-to-be-used/bookmark-64.png">
+                        <img src="img/icons-to-be-used/bookmark-64.png">
                     </div>
                     <div class="about_post">
                         <h3>71 likes</h3>
@@ -148,14 +160,14 @@
                     </div>
                     <div class="comment_section">
                         <input type="text" class="input_comment" placeholder="Add comments">
-                        <img src="/img/icons-to-be-used/feeling.png">
+                        <img src="img/icons-to-be-used/feeling.png">
                     </div>
 
             </div>
             <div class="card">
                 <div class="header-section">
                     <div class="post_identity">
-                        <img src="/img/photos-to-be-used//member-2.png" class="pro-pic">
+                        <img src="img/photos-to-be-used//member-2.png" class="pro-pic">
                         <div class="pro-name_and_discripton">
                             <h4>kebede demelash</h4>
                             <p>Netherland, kalhashi ocean</p>
@@ -168,11 +180,11 @@
                 </div>
                 <div class="interactions">
                     <div class="reactions">
-                        <img src="/img/icons-to-be-used/heart-64.png" >
-                        <img src="/img/icons-to-be-used/comments-48.png" >
-                        <img src="/img/icons-to-be-used/share.png" >
+                        <img src="img/icons-to-be-used/heart-64.png" >
+                        <img src="img/icons-to-be-used/comments-48.png" >
+                        <img src="img/icons-to-be-used/share.png" >
                     </div>
-                    <img src="/img/icons-to-be-used/bookmark-64.png">
+                    <img src="img/icons-to-be-used/bookmark-64.png">
                 </div>
                 <div class="about_post">
                     <h3>71 likes</h3>
@@ -180,13 +192,13 @@
                 </div>
                 <div class="comment_section">
                     <input type="text" class="input_comment" placeholder="Add comments">
-                    <img src="/img/icons-to-be-used/feeling.png">
+                    <img src="img/icons-to-be-used/feeling.png">
                 </div>
             </div>
             <div class="card">
                 <div class="header-section">
                     <div class="post_identity">
-                        <img src="/img/photos-to-be-used/photo5.png" class="pro-pic">
+                        <img src="img/photos-to-be-used/photo5.png" class="pro-pic">
                         <div class="pro-name_and_discripton">
                             <h4>kebede demelash</h4>
                             <p>Netherland, kalhashi ocean</p>
@@ -199,11 +211,11 @@
                 </div>
                 <div class="interactions">
                     <div class="reactions">
-                        <img src="/img/icons-to-be-used/heart-64.png" >
-                        <img src="/img/icons-to-be-used/comments-48.png" >
-                        <img src="/img/icons-to-be-used/share.png" >
+                        <img src="img/icons-to-be-used/heart-64.png" >
+                        <img src="img/icons-to-be-used/comments-48.png" >
+                        <img src="img/icons-to-be-used/share.png" >
                     </div>
-                    <img src="/img/icons-to-be-used/bookmark-64.png">
+                    <img src="img/icons-to-be-used/bookmark-64.png">
                 </div>
                 <div class="about_post">
                     <h3>71 likes</h3>
@@ -211,13 +223,13 @@
                 </div>
                 <div class="comment_section">
                     <input type="text" class="input_comment" placeholder="Add comments">
-                    <img src="/img/icons-to-be-used/feeling.png">
+                    <img src="img/icons-to-be-used/feeling.png">
                 </div>
             </div>
             <div class="card">
                 <div class="header-section">
                     <div class="post_identity">
-                        <img src="/img/photos-to-be-used/photo4.png" class="pro-pic">
+                        <img src="img/photos-to-be-used/photo4.png" class="pro-pic">
                         <div class="pro-name_and_discripton">
                             <h4>ayelech wegderes</h4>
                             <p>Netherland, kalhashi ocean</p>
@@ -230,11 +242,11 @@
                 </div>
                 <div class="interactions">
                     <div class="reactions">
-                        <img src="/img/icons-to-be-used/heart-64.png" >
-                        <img src="/img/icons-to-be-used/comments-48.png" >
-                        <img src="/img/icons-to-be-used/share.png" >
+                        <img src="img/icons-to-be-used/heart-64.png" >
+                        <img src="img/icons-to-be-used/comments-48.png" >
+                        <img src="img/icons-to-be-used/share.png" >
                     </div>
-                    <img src="/img/icons-to-be-used/bookmark-64.png">
+                    <img src="img/icons-to-be-used/bookmark-64.png">
                 </div>
                 <div class="about_post">
                     <h3>71 likes</h3>
@@ -242,7 +254,7 @@
                 </div>
                 <div class="comment_section">
                     <input type="text" class="input_comment" placeholder="Add comments">
-                    <img src="/img/icons-to-be-used/feeling.png">
+                    <img src="img/icons-to-be-used/feeling.png">
                 </div>
             </div>
 
@@ -251,7 +263,7 @@
             <h3>Requests</h3>
             <div class="request1">
                 <div class="profile-and-mutualFriends">
-                    <img src="/img/photos-to-be-used/member-2.png">
+                    <img src="img/photos-to-be-used/member-2.png">
                     <div class="user-and-mutualFriends">
                         <h3>James Bond</h3>
                         <p>8 mutual friends</p>
@@ -264,7 +276,7 @@
             </div>
             <div class="request2">
                 <div class="profile-and-mutualFriends">
-                    <img src="/img/photos-to-be-used/Mulatu_Teshome.jpg">
+                    <img src="img/photos-to-be-used/Mulatu_Teshome.jpg">
                     <div class="user-and-mutualFriends">
                         <h3>Mulatu Teshome</h3>
                         <p>23 mutual friends</p>
@@ -277,7 +289,7 @@
             </div>
             <div class="request3">
                 <div class="profile-and-mutualFriends">
-                    <img src="/img/photos-to-be-used/Abiy-Ahmed.jpg">
+                    <img src="img/photos-to-be-used/Abiy-Ahmed.jpg">
                     <div class="user-and-mutualFriends">
                         <h3>Abiy Ahmed</h3>
                         <p>9 mutual friends</p>
@@ -290,7 +302,7 @@
             </div>
             <div class="request4">
                 <div class="profile-and-mutualFriends">
-                    <img src="/img/photos-to-be-used/shalewerk.jpg">
+                    <img src="img/photos-to-be-used/shalewerk.jpg">
                     <div class="user-and-mutualFriends">
                         <h3>Shalework Zewde</h3>
                         <p>16 mutual friends</p>
