--- a/loginpage.html
+++ b/loginpage.html
@@ -7,6 +7,7 @@
     <title>Share | Log in | Sign Up </title>
     <link rel="stylesheet" href="/css/signUp.css">
     <link rel="shortcut icon" href="img/logo.png" type="image/png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="wrapper">
@@ -20,8 +21,10 @@
                     <div class="logo"></div>
                     <div class="login-form">
                         <div class="login">
+                            <div class="error login-error"></div>
                             <input type="text" name="username" placeholder="Username" class="email">
-                            <input type="text" name="password" placeholder="Password" class="password">
+                            <input type="password" name="password" placeholder="Password" class="password">
+                            <span><i id="passwordToggler" class="far fa-eye eyetoggle eye-login"></i></span>
                             <button class="btn">login</button>
                         </div>
                         <div class="forgotPassword">
@@ -37,12 +40,14 @@
                     <div class="right_manlogin"></div>
             </div>
         </div>
-        <div class="form_section">
+        <div class="form_section hide">
             <form action="Post" class="form">
                 <div class="form-header">
                     <h1>Sign Up</h1>
                     <h4>It's quick and easy.</h4>
                 </div>
+                <span><i class="far fa-x close"></i></span>
+                <div class="error login-error"></div>
                 <div class="name">
                     <input type="text" name="firstname" placeholder="First name" class="fname">
                     <input type="text" name="lastname" placeholder="Last name" class="lname"> 
@@ -50,6 +55,7 @@
                 <div class="email_password">
                     <input type="text" name="email" placeholder="Mobile number or Email" class="email"/>
                     <input type="password" name="password" placeholder="New password" class="password"/>
+                    <span><i id="passwordTogglerSignUp" class="far fa-eye eyetoggle eye-signUp"></i></span>
                 </div>
                 <label for="Birthdate">Birthday:</label>
                 <div class="birth">
@@ -157,6 +163,6 @@
             </form> 
         </div>
     </div>
-    
+    <script src="js/login-signin.js"></script>
 </body>
 </html>
