made some changes on the chat part and friend request section, also created search section

--- a/notification.html
+++ b/notification.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/notification.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/search.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>share || notification</title>
 </head>
 
@@ -84,91 +85,89 @@
     <div class="wrapper">
         <div class="container">
 
-            <div class="notification">
+        </div> 
+            <div class="search_section animate">
+                 <form action="post" class="search_input">
+                     <div class="content">
+                         <h3>Search</h3>
+                         <div class="input_seciton">
+                             <i class="fa fa-search"></i>
+                             <input type="text" class="search" placeholder="Search">
+                             <i class="fa fa-times"></i>
+                         </div>
+                     </div>
+                 </form>
+                 <div class="results">
+                         <p class="noresult">No Result Found</p>
+                     <div class="result-card">
+                         <img src="./img/photos-to-be-used/feed-image-1.png" class="pro_pic">
+                             <div class="result">
+                                 <h3>username</h3>
+                                 <p>name</p>
+                             </div>
+                     </div>
+                     <div class="result-card">
+                         <img src="./img/photos-to-be-used/feed-image-1.png" class="pro_pic">
+                             <div class="result">
+                                 <h3>username</h3>
+                                 <p>name</p>
+                             </div>
+                     </div>
+                     <div class="result-card">
+                         <img src="./img/photos-to-be-used/feed-image-1.png" class="pro_pic">
+                             <div class="result">
+                                 <h3>username</h3>
+                                 <p>name</p>
+                             </div>
+                     </div>
+                     <div class="result-card">
+                         <img src="./img/photos-to-be-used/feed-image-1.png" class="pro_pic">
+                             <div class="result">
+                                 <h3>username</h3>
+                                 <p>name</p>
+                             </div>
+                     </div>
+                     <div class="result-card">
+                         <img src="./img/photos-to-be-used/feed-image-1.png" class="pro_pic">
+                             <div class="result">
+                                 <h3>username</h3>
+                                 <p>name</p>
+                             </div>
+                     </div>
+                     <div class="result-card">
+                         <img src="./img/photos-to-be-used/feed-image-1.png" class="pro_pic">
+                             <div class="result">
+                                 <h3>username</h3>
+                                 <p>name</p>
+                             </div>
+                     </div>
+                     <div class="result-card">
+                         <img src="./img/photos-to-be-used/feed-image-1.png" class="pro_pic">
+                             <div class="result">
+                                 <h3>username</h3>
+                                 <p>name</p>
+                             </div>
+                     </div>
+                     <div class="result-card">
+                         <img src="./img/photos-to-be-used/feed-image-1.png" class="pro_pic">
+                             <div class="result">
+                                 <h3>username</h3>
+                                 <p>name</p>
+                             </div>
+                     </div>
+                     <div class="result-card">
+                         <img src="./img/photos-to-be-used/feed-image-1.png" class="pro_pic">
+                             <div class="result">
+                                 <h3>username</h3>
+                                 <p>name</p>
+                             </div>
+                     </div>
+    
+                 </div>
 
-                <div class="notification-profile-photo">
-                    <img src="/img/photos-to-be-used/status-3.png" alt="">
-                </div>
-                <div class="notification-body"><span>s.afomi </span> start following you.
-                    <small>5d</small></div>
-                <button class="follow-icon">follow</button>
-            </div>
+        </div>    
 
-            <div class="notification">
-
-                <div class="notification-profile-photo"><img src="/img/photos-to-be-used/status-3.png" alt=""></div>
-                <div class="notification-body"><span>feven3455 </span>,who you might know, is on instagram.
-                    <small>2d</small></div>
-                <button class="follow-icon">follow</button>
-            </div>
-
-            <div class="notification">
-
-                <div class="notification-profile-photo"><img src="/img/photos-to-be-used/status-3.png" alt=""></div>
-                <div class="notification-body"><span>s.afomi </span> start following you.
-                    <small>5d</small></div>
-                <button class="follow-icon">follow</button>
-            </div>
-
-            <div class="notification">
-
-                <div class="notification-profile-photo"><img src="/img/photos-to-be-used/status-3.png" alt=""></div>
-                <div class="notification-body"><span>s.afomi </span> start following you.
-                    <small>5d</small></div>
-                <button class="follow-icon">follow</button>
-            </div>
-
-            <div class="notification">
-
-                <div class="notification-profile-photo"><img src="/img/photos-to-be-used/status-3.png" alt=""></div>
-                <div class="notification-body"><span>s.afomi </span> start following you.
-                    <small>5d</small></div>
-                <button class="follow-icon">follow</button>
-            </div>
-
-            <div class="notification">
-
-                <div class="notification-profile-photo"><img src="/img/photos-to-be-used/status-3.png" alt=""></div>
-                <div class="notification-body"><span>s.afomi </span> start following you.
-                    <small>5d</small></div>
-                <button class="follow-icon">follow</button>
-            </div>
-
-            <div class="notification">
-
-                <div class="notification-profile-photo"><img src="/img/photos-to-be-used/status-3.png" alt=""></div>
-                <div class="notification-body"><span>s.afomi </span> start following you.
-                    <small>5d</small></div>
-                <button class="follow-icon">follow</button>
-            </div>
-
-
-            <div class="notification">
-
-                <div class="notification-profile-photo"><img src="/img/photos-to-be-used/status-3.png" alt=""></div>
-                <div class="notification-body"><span>s.afomi </span> start following you.
-                    <small>5d</small></div>
-                <button class="follow-icon">follow</button>
-            </div>
-
-            <div class="notification">
-
-                <div class="notification-profile-photo"><img src="/img/photos-to-be-used/status-3.png" alt=""></div>
-                <div class="notification-body"><span>s.afomi </span> start following you.
-                    <small>5d</small></div>
-                <button class="follow-icon">follow</button>
-            </div>
-
-            <div class="notification">
-
-                <div class="notification-profile-photo"><img src="/img/photos-to-be-used/status-3.png" alt=""></div>
-                <div class="notification-body"><span>s.afomi </span> start following you.
-                    <small>5d</small></div>
-                <button class="follow-icon">follow</button>
-            </div>
-
-
-        </div>
+    
     </div>
 </body>
 
